# ar-slides

./: .gitignore  Makefile  conf.py  index.rst  pyproject.toml  uvod.rst
evolucija-racunara/: 1950.rst  1960.rst  uvod.rst
